--- a/src/i18n/src/ru.yml
+++ b/src/i18n/src/ru.yml
@@ -2,10 +2,9 @@ name: Nereid
 unimplemented: Данная функция недоступна в этой версии
 configVersionMismatch:
   title: Файл настроек был создан в новой или неподдерживаемой версии Nereid,
-    поэтому, он не может быть прочитан. Нажмите "Перезаписать", чтобы
-    перезаписать его, теряя прошлые настройки. Нажмите "Выйти", чтобы закрыть
-    Nereid.
-  button-overwrite: Перезаписать
+    поэтому он не может быть прочитан. Нажмите "Сбросить", чтобы сбросить ваши
+    данные (включая закладки и историю!), Нажмите "Выйти", чтобы закрыть Nereid.
+  button-overwrite: Сбросить
   button-exit: Выйти
 common:
   downloads: Загрузки
