lang: changed the wording of `Switch panes`

--- a/src/i18n/src/en.yml
+++ b/src/i18n/src/en.yml
@@ -383,7 +383,7 @@ menu:
   tools: Tools
   panes:
     close: Close panes
-    switch: Switch panes
+    switch: Swap panes
   devTools: Developer tools
   taskManager: Task manager
   currentTab: This tab
