--- a/src/i18n/src/ru.yml
+++ b/src/i18n/src/ru.yml
@@ -343,7 +343,9 @@ net-error:
   failed:
     - Соединение прервано.
   internetLost:
-    - Потеряно подключение к интернету.
+    - Нет подключения.
+    - Похоже, ваше устройство не подлключено к интернету. Проверьте ваше
+      подключение к сети Wi-Fi или Ethernet.
   SSL:
     - Произошла ошибка SSL.
     - Защищенное соединение с <b>${host}</b> не может быть обеспечено.
