feat: moving a tab group to new window

--- a/src/i18n/src/en.yml
+++ b/src/i18n/src/en.yml
@@ -125,6 +125,7 @@ ui:
     newTab: New tab in this group
     ungroup: Ungroup
     closeAll: Close all in this group
+    moveToNewWindow: Move this group to a new window
   addressBar-placeholder: Type a search query or a URL
   security:
     title: Security
