--- a/src/i18n/src/ru.yml
+++ b/src/i18n/src/ru.yml
@@ -423,6 +423,8 @@ menu:
     print: Печать
     viewSourceCode: Открыть исходный код
     openDevTools: Код элемента
+    undo: Отменить
+    redo: Повторить
     copy: Копировать
     cut: Вырезать
     delete: Удалить
@@ -430,6 +432,11 @@ menu:
     pasteAndMatchStyle: Вставить с исходным оформлением
     pasteAndSearch: Вставить и найти "${query}"
     pasteAndGo: 'Вставить и перейти: "${query}"'
+    macOS:
+      hide: Скрыть
+      hideOthers: Скрыть остальные
+      unhide: Раскрыть
+      services: Сервисы
     image:
       viewInNewTab: Открыть картинку в новой вкладке
       copy: Копировать картинку
