--- a/src/i18n/src/ru.yml
+++ b/src/i18n/src/ru.yml
@@ -466,6 +466,8 @@ menu:
     reloadAll: Перезагрузить все вкладки
     copyURL: Скопировать URL
     duplicate: Дублировать вкладку
+    pin: Закрепить вкладку
+    unpin: Открепить вкладку
     sound-mute: Выключить звук на вкладке
     sound-unmute: Включить звук на вкладке
     openInNewWindow: Вынести вкладку в отдельное окно
