feat: the Tabs hint provider feat: pedals

--- a/src/i18n/src/en.yml
+++ b/src/i18n/src/en.yml
@@ -191,6 +191,9 @@ ui:
     prev-search: Previous search on ${site}
     url: URL
     search: ${engine} search
+    tabHint:
+      sign: (Tab)
+      description: Switch to this tab
   inPageSearch:
     placeholder: Find in page...
     prev: Previous
