i18n: fixed grammar in the russian translation

--- a/src/i18n/src/ru.yml
+++ b/src/i18n/src/ru.yml
@@ -31,8 +31,8 @@ common:
       defaultMark: (по умолчанию)
     geolocation:
       name: Геолокация (не работает)
-      desc: Позволяет получить доступ к вашем местоположении
-      prompt: ${hostname} хочет получить доступ к вашем местоположении
+      desc: Позволяет получить доступ к вашему местоположению
+      prompt: ${hostname} хочет получить доступ к вашему местоположению
     fullscreen:
       name: Полный экран
       desc: Позволяет переходить в полноэкранный режим
