i18n: added missing selectAll translation

--- a/src/i18n/src/ru.yml
+++ b/src/i18n/src/ru.yml
@@ -434,6 +434,7 @@ menu:
     openDevTools: Код элемента
     undo: Отменить
     redo: Повторить
+    selectAll: Выбрать все
     copy: Копировать
     cut: Вырезать
     delete: Удалить
