--- a/src/i18n/src/en.yml
+++ b/src/i18n/src/en.yml
@@ -438,6 +438,7 @@ menu:
     openDevTools: Inspect
     undo: Undo
     redo: Redo
+    selectAll: Select all
     copy: Copy
     cut: Cut
     delete: Delete
