--- a/src/i18n/src/ru.yml
+++ b/src/i18n/src/ru.yml
@@ -204,6 +204,15 @@ ui:
       notReady: Страница загрузилась до загрузки блокировщика рекламы, так что
         некоторые трекеры были проигнорированы.
       button-reload: Перезагрузить страницу
+  popupBlocked:
+    info: Всплывающее окно заблокировано
+    dialog:
+      title: "Всплывающие окна, заблокированные на этой странице:"
+      openThis: Открыть это окно
+      option-alwaysAllow: Всегда разрешить всплывающие окна на ${hostname}
+      option-block: Продолжать блокировать
+      option-silentlyBlock: Блокировать без уведомлений
+      manage: Открыть настройки...
   nereidSetupNotification:
     text: Вы не закончили настройку Nereid.
     link: Настроить сейчас
