--- a/src/i18n/src/ru.yml
+++ b/src/i18n/src/ru.yml
@@ -192,16 +192,17 @@ ui:
     blockedAmount: "Заблокировано трекеров: ${count}"
     list: Список трекеров
     switch-off: Выключить блокировку на ${hostname}
-    switch-on: Включить блокировку на ${hostname
+    switch-on: Включить блокировку на ${hostname}
     warnings:
       active: Иногда, из-за блокировщика рекламы некоторые страницы могут некорректно
         отображать контент. Если страница плохо загружается, попробуйте
         выключить адблок.
-      inactive: Реклама и трекеры на ${hostname} не блокируются, потому что он в белом
-        списке. Если адблок не мешает работе с сайтом, настоятельно
+      inactive: Реклама и трекеры на ${hostname} не блокируются, потому что этот сайт
+        в белом списке. Если адблок не мешает работе с сайтом, настоятельно
         рекомендуется его включить.
-      malfunction: В блокировщике рекламы произошла критическая ошибка.
-      notReady: Страница загрузилась до загрузки блокировщика рекламы, так что
+      malfunction: В блокировщике рекламы произошла критическая ошибка. Мы попробуем
+        его перезагрузить через несколько секунд.
+      notReady: Страница загрузилась до загрузки блокировщика рекламы, поэтому
         некоторые трекеры были проигнорированы.
       button-reload: Перезагрузить страницу
   popupBlocked:
@@ -594,6 +595,10 @@ pages:
       denyCrossOriginPermissions:
         title: Запрещать межсайтовые разрешения
         description: Встроенные страницы не смогут запрашивать разрешения
+      adblocker:
+        title: Блокировщик рекламы
+        description: Блокировщик рекламы блокирует известные трекеры и рекламу на всех
+          сайтах.
       useHintingService:
         title: Использовать сервис подсказок
         description: Nereid будет отправлять запросы на сервер поисковой системы, когда
