feat: sevice view (available behind a control option)

--- a/src/i18n/src/en.yml
+++ b/src/i18n/src/en.yml
@@ -261,6 +261,7 @@ windows:
       windowDevTools: Window developer tools (window ID ${id})
       windowUI: Window UI Process (ID ${id})
       helperWindowUI: "Window: ${title}"
+      serviceView: UI Service Process
       gpu: GPU process
     table:
       name: Name
